--- a/internal-gateway/i-gateway.yaml
+++ b/internal-gateway/i-gateway.yaml
@@ -1,9 +1,9 @@
 kind: Gateway
 apiVersion: networking.x-k8s.io/v1alpha1
 metadata:
-  name: internal-http
+  name: internal-gateway
 spec:
-  gatewayClassName: gke-l7-rilb-mc
+  gatewayClassName: gke-l7-rilb
   listeners:
     - protocol: HTTP
       port: 80
@@ -11,5 +11,7 @@ spec:
         kind: HTTPRoute
         selector:
           matchLabels:
-            gateway: internal-http
----
+            gateway: internal-gateway
+  addresses:
+    - type: NamedAddress
+      value: i-gw-ip
